--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -360,7 +360,7 @@ padding: 30px 0;
 .partfolio-box {
 border: 1px solid var(--cl-box);
 border-top: 0;
-padding: 20px 0;
+padding: 20px 24px;
 }
 .partfolio-work-item {
   margin-bottom: 4px;
