--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,6 +16,7 @@
   --bg-cl: #f5f5f5;
   --second-bg-cl: #f5f4fa;
   --cl-box: #eeeeee;
+  --bg-activ-btn: #188CE8;
 
   /* Others */
   --items-3: 3;
@@ -75,6 +76,11 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  align-items: center;
 }
 
 /*Header*/
@@ -144,13 +150,11 @@ img {
 
 .hero {
   background-color: var(--accent-bg-cl);
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  align-items: center;
-}
+
 
 .hero-title {
   font-weight: 900;
@@ -160,8 +164,15 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--second-txt-cl);
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
 }
-
+.hero-btn:hover,
+.hero-btn:focus {
+ background-color: var(--bg-activ-btn);
+}
 .hero-btn {
   font-family: inherit;
   font-weight: 700;
@@ -177,6 +188,9 @@ img {
   padding: 6px 22px;
   margin-left: auto;
   margin-right: auto;
+  border: none;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
 
 /*Section 2 (особливості)*/
@@ -186,17 +200,20 @@ img {
 
 .feature-list {
   display: flex;
+  gap: 30px;
 }
 
 /*.feature-headline {
-}
+ } */
 
 .feature-item {
-}*/
+  width: 270px;
+}
 
 .feature-title {
   margin-bottom: 10px;
   font-weight: 700;
+  font-size: 14px;
   line-height: calc(16 / 14);
   text-transform: uppercase;
   color: var(--main-txt-cl);
@@ -223,7 +240,7 @@ img {
   line-height: calc(42 / 36);
   text-align: center;
   color: var(--main-txt-cl);
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .outer-item {
@@ -261,7 +278,7 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  padding: 30px 0;
+  padding: 30px;
 }
 
 .team-name {
@@ -295,6 +312,12 @@ img {
 .footer-logo-part {
   color: var(--second-txt-cl);
 }
+
+.footer-list{
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
 .footer-contact {
   font-style: normal;
   text-decoration: none;
@@ -307,7 +330,6 @@ img {
 }
 
 .footer-item {
-  margin-bottom: 9px;
   color: var(--footer-link-txt-cl);
 }
 
@@ -316,11 +338,12 @@ img {
   display: flex;
   justify-content: center;
   gap: 8px;
-}
-
-.partfolio-filtr-item {
   margin-bottom: 50px;
 }
+
+/* .partfolio-filtr-item {
+  
+} */
 
 .partfolio-btn {
   font-family: inherit;
@@ -332,6 +355,8 @@ img {
   text-align: center;
   background-color: var(--second-bg-cl);
   border: none;
+  padding: 6px 22px;
+  border-radius: 4px;
 }
 
 .partfolio-btn:hover,
