--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -87,7 +87,7 @@ img {
 .header {
   background: var(--second-txt-cl);
   color: currentColor;
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;;
 }
 .header-container {
   display: flex;
@@ -125,8 +125,8 @@ img {
 
 .header-link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .nav-contact {
